하나의 멤버 소개 xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/mainTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabSelectedTextColor="@color/black"
         app:tabIndicatorColor="#D7BFFA"/>
 
 <androidx.viewpager.widget.ViewPager
