--- a/app/src/main/res/layout/fragment_allmembers.xml
+++ b/app/src/main/res/layout/fragment_allmembers.xml
@@ -26,11 +26,9 @@
         android:layout_marginTop="20dp"
         android:gravity="center" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="allmembers 프래그먼트입니다"
-            android:textSize="20sp" />
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
